add youtube video

--- a/README.Rmd
+++ b/README.Rmd
@@ -12,6 +12,9 @@ knitr::opts_chunk$set(
 ```
 
 # First steps in spatial handling and visualization
+
+This repository contains the course material of our useR! 2020 tutorial. You can watch the video (with english subtitles) of the presentation parts (when we present the slides) on the Youtube RConsortium channel there: https://youtu.be/1Hp8MO82t4g    
+
 **Instructors: [Sébastien Rochette](https://twitter.com/statnmap), [Dorris Scott](https://twitter.com/Dorris_Scott), [Jakub Nowosad](https://twitter.com/jakub_nowosad)**
 
 <!-- badges: start -->
@@ -59,7 +62,7 @@ knitr::include_graphics("images/CRUZ_by_ThinkR_e-learning-platform.png")
 - Find some [spatial tips and examples of maps](https://statnmap.com) on my blog: https://statnmap.com
 - Follow `#rspatial` on Twitter and ask your questions to the community
 - Follow `#RSpatialChat` on Tuesday's on Twitter lead by [\@CivicAngela](https://twitter.com/CivicAngela)
-- Join `R4DS` Slack community, there is a `rspatial` channel
+- Join `R4DS` Slack community, there is the `help-6-spatial` channel
 - There is a Telegram group in Spanish: `RSpatial_ES`
 
 
